--- a/.travis.yml
+++ b/.travis.yml
@@ -13,5 +13,5 @@ script:
   - make test
 
 after_success:
-  - make docker_build
-  - make docker_push
+  - sudo make docker_build
+  - sudo make docker_push
