--- a/.travis.yml
+++ b/.travis.yml
@@ -15,3 +15,8 @@ script:
 after_success:
   - sudo make docker_build
   - sudo make docker_push
+
+deploy:
+  provider: heroku
+  app: obscure-brushlands-91700
+  api_key: ${HEROKU_API_KEY}
